# wearable_control_hrp

./: CMakeLists.txt  README.md  package.xml
scripts/: hrp_action.py  hrp_control.py  hrp_control_and_action.py
