<?xml version="1.0"?>
<package>
  <name>wearable_control_hrp</name>  <!-- Change by the name of your package  -->
  <version>0.0.1</version>
  <description>
  ROS package for control hrp robot using a smartwatch
  </description> <!-- Change the autor data  -->
  <maintainer email="enriquecoronadozu@gmail.com">
    EMARO+ ,University of Genoa
  </maintainer>
    <license>BSD</license>
  <url type="repository">
  https://github.com/enriquecoronadozu/wearable_control_hrp.git
  </url>
  <author>Luis Enrique Coronado </author>
  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Baxter dependences -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
